--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="mc_embed_signup_scroll">
 	<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_468c40cdb121a24e145b40119_6135f987aa" tabindex="-1" value=""></div>
-    <div class="clear"><input class="btn btn-primary btn-lg btn-block" type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input class="btn btn-primary btn-lg btn-block" type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe"></div>
     </div>
 </form>
 </div>
